<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Activities.SchedulesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/layout_app_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <include
                    android:id="@+id/timePicker"
                    layout="@layout/time_picker_layout" />

                <Button
                    android:id="@+id/calendarButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/select_date" />

                <include
                    android:id="@+id/daySelector"
                    layout="@layout/day_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/schedule_settings"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/houseSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp" />

                <Spinner
                    android:id="@+id/peripheralTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp" />

                <Spinner
                    android:id="@+id/floorsSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp" />

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/search_peripherals" />

                <TextView
                    android:id="@+id/peripheralsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/available_peripherals"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp" />

                <LinearLayout
                    android:id="@+id/peripheralsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/saveScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save_schedule"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:menu="@menu/menu_drawer"
        app:itemTextColor="@color/black"
        app:headerLayout="@layout/nav_header" />
</androidx.drawerlayout.widget.DrawerLayout>
